--- a/paper.tex
+++ b/paper.tex
@@ -454,7 +454,8 @@ Using this notation and using the multiplicativity property of Kondo's Gauss sum
 				\left(-1\right)^n & \quadraticExtension = \finiteField \text{ and } \epsilon_{\hermitianSpace} = 1\\
 				\left(-1\right)^{n+1} \tau\left(\chi^{-1}, \fieldCharacter\right) & \quadraticExtension = \finiteField \text{ and } \epsilon_{\hermitianSpace} = -1 \\
 				1 & \text{otherwise.}
-	\end{dcases}.$$
+	\end{dcases},$$
+	where $n = \left\lfloor \frac{\dim_{\finiteField} \hermitianSpace}{2} \right\rfloor$.
 	However, we will not need this version for our purposes. \elad{Check odd orthogonal case. Probably needs a sign modification (the formula needs to be $\left(-1\right)^{\text{dual group dimension}} \times \text{product of Gauss sums}$). $\varepsilon_{\algebraicGroup{G}}$ contributes half of the dimension so that's why we add another half here.}
 \end{remark}
 
