Adding reference to Carter

--- a/references.bib
+++ b/references.bib
@@ -804,4 +804,18 @@
   note   = {\href{https://arxiv.org/abs/2407.15128}{arXiv:2407.15128}},
 }
 
+@Book{Carter1985,
+  author     = {Carter, Roger W.},
+  publisher  = {John Wiley \& Sons, Inc., New York},
+  title      = {Finite groups of {L}ie type},
+  year       = {1985},
+  isbn       = {0-471-90554-2},
+  note       = {Conjugacy classes and complex characters, A Wiley-Interscience Publication},
+  series     = {Pure and Applied Mathematics (New York)},
+  mrclass    = {20G40 (20-02 20C15)},
+  mrnumber   = {794307},
+  mrreviewer = {David\ B.\ Surowski},
+  pages      = {xii+544},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
